[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "money-get"
version = "0.1.0"
description = "A股投资辅助 Agent - 历史操作复盘 + 数据分析"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.1.0",
    "akshare>=1.14.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
money-get = "money_get.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
